acquisto item acquirente - springboot

--- a/src/main/resources/templates/dashboard/produttore.html
+++ b/src/main/resources/templates/dashboard/produttore.html
@@ -44,13 +44,13 @@
 </div>
 
 <!-- ================== MODALI COMUNI ================== -->
-<div th:replace="fragments/modals :: delete-modals('Prodotto Trasformato')"></div>
-<div th:replace="fragments/modals :: edit-error-modal('Prodotto Trasformato')"></div>
-<div th:replace="fragments/modals :: create-update-modals('Prodotto Trasformato','/trasformatore/dashboard')"></div>
-<div th:replace="fragments/modals :: social-modals('/trasformatore/dashboard')"></div>
+<div th:replace="fragments/modals :: delete-modals('Prodotto')"></div>
+<div th:replace="fragments/modals :: edit-error-modal('Prodotto')"></div>
+<div th:replace="fragments/modals :: create-update-modals('Prodotto','/produttore/dashboard')"></div>
+<div th:replace="fragments/modals :: social-modals('/produttore/dashboard')"></div>
 <div th:replace="fragments/modals :: social-feed-modal"></div>
-<div th:replace="fragments/modals :: prenotazione-visita-modals('/trasformatore/dashboard')"></div>
-<div th:replace="fragments/modals :: prenotazioni-delete-modals('/trasformatore/dashboard')"></div>
+<div th:replace="fragments/modals :: prenotazione-visita-modals('/produttore/dashboard')"></div>
+<div th:replace="fragments/modals :: prenotazioni-delete-modals('/produttore/dashboard')"></div>
 <div th:replace="fragments/modals :: social-not-available-modal"></div>
 
 
