contenuto piattaforma gestore - springboot

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -92,6 +92,7 @@
             <option value="DISTRIBUTORE_TIPICITA">Distributore</option>
             <option value="TRASFORMATORE">Trasformatore</option>
             <option value="ANIMATORE">Animatore</option>
+            <option value="GESTORE_PIATTAFORMA">Gestore</option>
         </select>
         <p th:if="${#fields.hasErrors('ruolo')}" th:errors="*{ruolo}" class="field-error"></p>
     </div>
