--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,6 +81,7 @@
             <option value="DISTRIBUTORE_TIPICITA">Distributore</option>
             <option value="TRASFORMATORE">Trasformatore</option>
             <option value="ANIMATORE">Animatore</option>
+            <option value="GESTORE_PIATTAFORMA">Gestore</option>
         </select>
     </div>
 
