elimina profilo - springboot

--- a/src/main/resources/templates/dashboard/acquirente.html
+++ b/src/main/resources/templates/dashboard/acquirente.html
@@ -131,6 +131,7 @@
 
 <!-- cancellazioni -->
 <div th:replace="fragments/profile-delete-modal :: profile-delete-modal"></div>
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 
 <hr class="section-separator"/>
 
