--- a/src/main/resources/templates/dashboard/animatore.html
+++ b/src/main/resources/templates/dashboard/animatore.html
@@ -41,6 +41,7 @@
 <div th:replace="fragments/modals :: social-not-available-modal"></div>
 <!-- cancellazioni -->
 <div th:replace="fragments/profile-delete-modal :: profile-delete-modal"></div>
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 
 <hr class="section-separator"/>
 
