--- a/src/main/resources/templates/dashboard/curatore.html
+++ b/src/main/resources/templates/dashboard/curatore.html
@@ -143,6 +143,7 @@
 
 <!-- Modale eliminazione profilo (fragment comune) -->
 <div th:replace="fragments/profile-delete-modal :: profile-delete-modal"></div>
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 
 <p><a th:href="@{/}">⬅ Torna alla Home</a></p>
 
