--- a/src/main/resources/templates/dashboard/gestore.html
+++ b/src/main/resources/templates/dashboard/gestore.html
@@ -44,6 +44,7 @@
 
 <!-- Modali specifici per gestore -->
 <div th:replace="fragments/gestore-modals :: modals"></div>
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 
 <hr class="section-separator"/>
 
