--- a/src/main/resources/templates/dashboard/trasformatore.html
+++ b/src/main/resources/templates/dashboard/trasformatore.html
@@ -54,6 +54,7 @@
 <div th:replace="fragments/modals :: prenotazioni-delete-modals('/trasformatore/dashboard')"></div>
 <div th:replace="fragments/modals :: prenotazione-visita-modals('/trasformatore/dashboard')"></div>
 <div th:replace="fragments/modals :: social-not-available-modal"></div>
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 
 <!-- ================== MODALE ELIMINAZIONE PROFILO ================== -->
 <div th:replace="fragments/profile-delete-modal :: profile-delete-modal"></div>
