--- a/src/main/resources/templates/dashboard/distributore.html
+++ b/src/main/resources/templates/dashboard/distributore.html
@@ -54,7 +54,8 @@
 <div th:replace="fragments/modals :: prenotazioni-delete-modals('/distributore/dashboard')"></div>
 <div th:replace="fragments/modals :: prenotazione-visita-modals('/distributore/dashboard')"></div>
 <div th:replace="fragments/modals :: social-not-available-modal"></div>
-
+<!-- Nuova notifica eliminazione profilo approvata -->
+<div th:replace="fragments/profile-delete-notification :: profile-delete-notification"></div>
 <!-- ================= MODALE ELIMINAZIONE PROFILO ================= -->
 <div th:replace="fragments/profile-delete-modal :: profile-delete-modal"></div>
 
